finished Sue's comments on research recommendations

--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -79,7 +79,7 @@ For aggregate abundance LRPs we recommend that SMU status be provisional when SM
 
 ## FUTURE RESEARCH
 
-We recommend future research into the impact of temporal trends in underlying population parameters (e.g. productivity) on LRPs, and the evaluation of LRP methods given those and other sources uncertainties. We highlight time-varying parameters due to their pervasiveness in Pacific salmon dynamics and documented impacts on reference points.
+We recommend future research on the impacts of temporal trends in underlying population parameters (e.g. productivity), adapting LRPs to include a broader scope for serious harm, and the evaluation of LRP methods given temporal variability in population parameters and other sources of uncertainty, as described in more detail below. We highlight time-varying parameters due to their pervasiveness in Pacific salmon dynamics and documented impacts on reference points.
 
 ### TIME-VARYING PARAMETERS AND IMPACTS ON LRPS
 
@@ -87,49 +87,40 @@ There is increasing evidence of time varying parameters in Pacific salmon popula
 
 Time-varying recruitment parameters affect estimates for salmon benchmarks [e.g., S~MSY~ and S~gen~, @holtImpactTimevaryingProductivity2020] and are also likely to affect population trends, resulting in changes to benchmarks based on historical observations [e.g., percentile-based benchmarks, @holtEvaluatingBenchmarksBiological2018]. Analytical methods for time-varying reference points have been proposed for other marine fish species [@amarEvaluationTwoManagement2009; @puntFisheriesManagementClimate2014], some of which have been evaluated empirically and in simulation with mixed results [@olearyComparisonMultipleApproaches2020; @bergerCharacterTemporalVariability2019]. However, determining support for time-varying parameters is not always straightforward. Common statistical diagnosis such as inspection of residuals and use of information criteria (e.g., AIC and BIC) often produce conflicting results [@holtImpactTimevaryingProductivity2020].  @bergerCharacterTemporalVariability2019 suggests that dynamic reference points that track changes in underlying population processes are most useful in situations when stock productivity shifts directionally and the productivity signal is correctly ascertained. In contrast, uncertainty from incorrectly identifying productivity trends can be a major source of inaccuracy in stock status [@bergerCharacterTemporalVariability2019]. 
 
-In a review of stock-recruit analyses for Pacific salmon, including the use of environmental covariates and time-varying parameters, @adkisonReviewSalmonSpawnerRecruitment2021 highlighted that even when there is strong evidence for non-stationarity in salmon populations it is not clear if reference points should be adjusted accordingly.  Where stock depletion is associated with time-varying parameters that are thought be reversible, it may be more appropriate to protect the population from harvest by maintaining high reference points using historical data [@dfoProceedingsNationalWorkshop2013; @szuwalskiClimateChangeNonstationary2016]. @dfoHarvestStrategyCompliant2006 recommended that changes to the reference points should only be adjusted when there is considerable evidence that productivity has changed and there are no expectations that these changes will be reverted naturally or achieved through management. Furthermore, DFO's Precautionary Approach Framework states that "when developing reference points efforts should be made to take into consideration the range of factors which may affect the productivity of the stock including changes in ocean conditions, where information is available" [@dfoFisheryDecisionMakingFramework2009]. This information can help identify if reductions in productivity are likely to be irreversible or only slowly reversible. @klaerHowMuchEvidence2015 devised a framework for evaluating the degree of confidence in productivity shifts in Australian fisheries, and similar approaches could be adapted for Canadian salmon populations. 
+Further research and guidance on when and how to account for time-varying parameters in assessments are required. In a review of stock-recruit analyses for Pacific salmon, @adkisonReviewSalmonSpawnerRecruitment2021 highlighted that even when there is strong evidence for non-stationarity in population dynamics it is not clear if reference points should be adjusted accordingly.  Where stock depletion is associated with time-varying parameters that are thought be reversible, it may be more appropriate to protect the population from harvest by maintaining high reference points using historical data [@dfoProceedingsNationalWorkshop2013; @szuwalskiClimateChangeNonstationary2016]. @dfoHarvestStrategyCompliant2006 recommended that changes to the reference points should only be adjusted when there is considerable evidence that productivity has changed and there are no expectations that these changes will be reverted naturally or achieved through management. Furthermore, DFO's Precautionary Approach Framework states that "when developing reference points efforts should be made to take into consideration the range of factors which may affect the productivity of the stock including changes in ocean conditions, where information is available" [@dfoFisheryDecisionMakingFramework2009]. This information can help identify if reductions in productivity are likely to be irreversible or only slowly reversible. @klaerHowMuchEvidence2015 devised a framework for evaluating the degree of confidence in productivity shifts in Australian fisheries, and similar approaches could be adapted for Canadian salmon populations. 
 
 Even if time-varying benchmarks or reference points are considered, it is difficult to define how often they should be changed [@zhangReportOceanFrontier2021]. Mistimed changes in benchmarks or reference points may lead to bias in stock status [@holtImpactTimevaryingProductivity2020] and volatility of management responses may lead to management uncertainty, reducing trust in the management process [@adkisonReviewSalmonSpawnerRecruitment2021]. Recent studies recommend the use of case-specific feedback simulation exercises in order to determine the appropriate scale to adjust reference points when stock-recruitment parameters are non-stationary [@holtImpactTimevaryingProductivity2020; @zhangAccountingNonstationaryStock2021; @olearyComparisonMultipleApproaches2020]. However, full feedback simulation studies might not be feasible for every conservation unit where trends are suspected due to limited resources. Future research should focus on identifying general advice on the best practices for adjusting benchmarks when stock dynamics are thought to be non-stationary.   
  
 
-Time-varying stock-recruitment dynamics usually occur at the CU level, and the implications for SMU-based LRPs that contain multiple CUs are not straightforward. There are no clear guidelines on how to translate time-varying stock recruitment parameters for CUs into aggregate-level LRPs. Effects of time-varying CU recruitment dynamics on aggregate abundance- and proportion-based LRPs will depend on the degree of synchrony among CUs, the direction of the change in recruitment parameters, and past and current stock status, among other factors. For example, in our case study on Interior Fraser River Coho Salmon, when consistent reductions in productivity were introduced in one sensitivity analysis (analysis that included informative priors on capacity in CU-level spawner-recruitment models), benchmarks declined for most CUs as did aggregate abundance-based LRP for the SMU. However, in cases where productivity varies at different rates among CUs or capacity changes as well, impacts on CU-level benchmarks and SMU-level LRPs will not be easily predictable. 
+Furthermore, research and guidance on accounting for time-varying parameters that differ among CUs within an SMU is warranted. Time-varying stock-recruitment dynamics usually occur at the CU level, and the implications for SMU-based LRPs that contain multiple CUs are not straightforward. There are no clear guidelines on how to translate time-varying stock recruitment parameters for CUs into aggregate-level LRPs. Effects of time-varying CU recruitment dynamics on aggregate abundance- and proportion-based LRPs will depend on the degree of synchrony among CUs, the direction of the change in recruitment parameters, and past and current stock status, among other factors. For example, in our case study on Interior Fraser River Coho Salmon, when consistent reductions in productivity were introduced in one sensitivity analysis (analysis that included informative priors on capacity in CU-level spawner-recruitment models), benchmarks declined for most CUs as did aggregate abundance-based LRP for the SMU. However, in cases where productivity varies at different rates among CUs or capacity changes as well, impacts on CU-level benchmarks and SMU-level LRPs will not be easily predictable. 
 
 
-In particular, while the definition of serious harm under DFO's Precautionary Approach Framework includes impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009], the assessment of harm to these components depends to some extent on the time-frame being considered. Assessments that include only very recent data may miss large declines in status and ecosystem impacts that occurred historically before the advent of modern survey records. In some cases, considering a longer view from genetic, archeological, paleoecological, or Indigenous Knowledge has demonstrated that recent declines are part of much larger historical declines associated with large-scale ecosystem impacts [@eckertDivingBackTime2018; @leeDiverseKnowledgeSystems2019; @priceGeneticsCenturyOld2019; @mckechnieArchaeologicalDataProvide2014] 
+### ADAPTING LRPS TO INCLUDE A BROADER SCOPE OF SERIOUS HARM
 
-Indigenous Knowledge has been considered in the development of target reference points for fisheries management [@caddyReferencePointsFisheries1995], and there is value in further considering its role in identifying serious harm. @reidTwoEyedSeeingIndigenous2021 introduce the concept of Two-Eyed Seeing (Etuaptmumk in Mi’kmaw), where both indigenous and western science perspectives are valued though the process of, “learning to see from one eye with the strengths of Indigenous knowledges and ways of knowing, and from the other eye with the strengths of mainstream knowledges and ways of knowing, and to use both these eyes together, for the benefit of all”.  By understanding serious harm, reference points, and other concepts and goals related to LRPs from both indigenous and mainstream scientific perspectives, LRPs may better reflect underlying biological processes understood through both knowledge systems. <!--CH: I see the internal inconsistency here where our direction from NHQ is to provide scientifically based LRPs, yet reconciliation says we should change our perspective and not focus entirely on western science. However, our TWG really wasn't equipped to do this and was beyond our ToR-->
+We recommend future research into LRPs that consider the ecosystem component of serious harm for Pacific salmon and include longer time frames for assessing thresholds of serious harm. While the definition of serious harm under DFO's Precautionary Approach Framework encompasses impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009], the assessment of harm to these components depends to some extent on the time-frame being considered. Assessments that include only very recent data may miss large declines in status and ecosystem impacts that occurred historically before the advent of modern survey records. In some cases, considering a longer view from genetic, archeological, paleoecological, or Indigenous Knowledge has demonstrated that recent declines are part of much larger historical declines associated with large-scale ecosystem impacts [@eckertDivingBackTime2018; @leeDiverseKnowledgeSystems2019; @priceGeneticsCenturyOld2019; @mckechnieArchaeologicalDataProvide2014] 
+
+Indigenous Knowledge has been considered in the development of target reference points for fisheries management [@caddyReferencePointsFisheries1995], and there is value in further considering its role in identifying serious harm. @reidTwoEyedSeeingIndigenous2021 introduce the concept of Two-Eyed Seeing (Etuaptmumk in Mi’kmaw), where both indigenous and western science perspectives are valued though the process of, “learning to see from one eye with the strengths of Indigenous knowledges and ways of knowing, and from the other eye with the strengths of mainstream knowledges and ways of knowing, and to use both these eyes together, for the benefit of all”.  By investigating serious harm, reference points, and the time-varying nature of these concepts from both indigenous and mainstream scientific perspectives, LRPs may better reflect biological processes underlying both knowledge systems. <!--CH: I see the internal inconsistency here where our direction from NHQ is to provide scientifically based LRPs, yet reconciliation says we should change our perspective and not focus entirely on western science. However, our TWG really wasn't equipped to do this and was beyond our ToR-->
 
 <!--CH omit: too focused on Scanner tool for this paper and would need reworking... "More specifically, methods for CU assessments could further consider serious harm to habitat or ecosystems, for example by extending the Pacific Salmon Status Scanner Tool to account for ecosystem components of serious harm, as well as divergent levels of data quantity and quality among CUs. Furthermore, the Rapid Multidimensional Scanner Tool could be extended to provide management triggers that occur prior to reaching the LRP, for example that require precautionary management and/or increased monitoring, as in @dowlingGuidelinesDevelopingFormal2015."-->
 
 
 <!--CH suggest removing as I don't want to focus too much on the recommendation for Bayes analyses though I briefly mention this in section on uncertainties. It brings up the Q, why didn't we do it?  Also this is more a guidance piece that future research.
 "We recommend that the application of LRPs and SMU status account for uncertainty in CU-level assessments where possible, ideally in  probabilistic framework. For example, for proportional LRPs derived from single metrics of status, the probability of all CUs being above lower benchmark could be derived by integrating the probability of CU-level benchmarks from Bayesian estimation and the associated status relative to those benchmarks across all CUs, e.g. by sampling from the posterior distributions of CU-level statuses across all CUs."--> 
+Alternative LRP methods may be developed in the future to capture a broader range of data availability, quality, and types, and dimensions of biological status, aligned with the key principles in Section \@ref(principles). As methods are developed and revised, SMU statuses can also be updated in accordance with principle 1, using the best available information for the development of LRPs. 
 
-###Evaluation of methods for LRPs
 
-We recommend further consideration and evaluation of criteria to identify if data-limited CUs can be represented by data-rich CUs included in analyses. Empirically, these criteria (or other) could be applied to SMUs where CU statuses are available to assess the extent to which statuses covary. Simulation evaluation could further evaluate the extent to which CU statuses on a single metric of status covary under a range of plausible underlying covariance in recruitment, age-structure and exploitation rates. 
+###EVALUATION OF LRP METHODS
+
+We recommend further consideration and evaluation of the four proposed criteria to identify if data-limited CUs can be represented by data-rich CUs (Step 3, Section \@ref(guidelines)). For example, these criteria could be applied to SMUs where CU statuses are available to assess the extent to which statuses covary when CUs are deemed representative of each other. Simulation evaluation could further evaluate the extent to which CU statuses on a single metric of status covary under a range of plausible underlying covariance in recruitment, age-structure and exploitation rates. 
 
 In addition, we recommend simulation evaluation of logistic regression LRPs and projection LRPs to data limitations related to the number of CUs with data and assumptions about population dynamics and covariance among CUs. We recommend that these evaluations be parameterized to the SMUs where their application is proposed to ensure results are relevant to the specific context under consideration.
 
 
 When applying methods to specific case studies, we recommend that aggregate abundance LRPs consider major structural uncertainties either through sensitivity analyses or model ensemble approaches. These analyses can determine how sensitive aggregate abundance benchmarks are to key model uncertainties, including those related to time-varying parameters, observation errors, and covariance in population dynamics and vulnerability to harvest. In addition, we recommend simulation evaluation be used to assess the robustness of LRPs to violating assumptions given underlying known statuses. Simulation evaluation could further be used to assess the frequency of updates to LRPs required to achieve objectives given underlying changes in model parameters and structure. <!--CH: observation errors in CU-status are relevant for logistic-regression LRPs as they might inflate noise in the LR, and they are relevant to the projection LRPs in the noise in the spawner and recruitment data-->
 
-Alternative LRP methods may be developed in the future to capture a broader range of data availability, quality, and types, and dimensions of biological status, aligned with the key principles in Section \@ref(principles). As methods are developed and revised, SMU statuses can also be updated in accordance with principle 1, using the best available information for the development of LRPs. 
-
-
-<!--CW: this last paragraph does not read as research recommendation, but as LRP recommendation, I am not sure it belongs here.
-Also I don't think that the fact that we did not recommend a probability level for the aggregate abundance LRP is a problem. Science will still work on producing tha logistic/projecton-based model, then Management+science+stakeholders will work on setting the probability and time frame for the objective.
-
-CH: I've changed the title of the section to "Future research and recommendations" so that this point can be captured. I think it's our recommendation to policy/FM to work with us to sort it out, as required. Do you think it could be done on a case by case basis, e.g., one SMU at 50% another at 66%, another at 90%?.-->
 
 
 
-
-
-
-<!--CH: could add Julie's last 2 principles somehow, which are more related applying LRPs, 
-Principle 7: Consider whether reference points or indicators should be changed.
-Principle 8: Clearly communicate advice on stock status and reference points.-->
 
 
 <!--
